# isomodder

./: .gitignore  .pre-commit-config.yaml  LICENSE  mypy.ini  setup.cfg
isomodder/: .pre-commit-config.yaml  README.md  dev-requirements.txt  setup.cfg  setup.py
isomodder/src/isomodder/: __init__.py  _builder.py  _fetcher.py  _hashing.py  _iso.py  _progress.py
src/isomodder/: __init__.py  _builder.py  _failure.py  _fetcher.py  _hashing.py  _iso.py  _iso_untyped.py  _progress.py
ubautoiso/: README.md
