[metadata]
name = isomodder
version = 0.1.0
description = High-level API for modifying Linux ISOs.
author = Will Brown
author_email = 5326080+wpbrown@users.noreply.github.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/wpbrown/azmeta-libs
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    pycdlib
    
[options.packages.find]
where = src